Fix tendance string placement in mobile templates
Moved the tendance string outside the state span element in AsusWRT, Monitoring, and Synology mobile templates to ensure correct HTML structure and styling.

--- a/core/template/mobile/AsusWRT.html
+++ b/core/template/mobile/AsusWRT.html
@@ -238,7 +238,7 @@
 				const color = getColorStyle(val, low, high, reversed)
 				const tendanceStr = (tendance && tendance !== '' && !tendance.startsWith('#')) ? tendance : ''
 
-				return prefix + '<span class="state"' + color + '>' + value + tendanceStr + '</span>'
+				return prefix + '<span class="state"' + color + '>' + value + '</span>' + tendanceStr
 			}
 
 			/**
